modified Landing Carousel issues, submit no longer covered by carousel

--- a/client/src/components/Carousel/assets/style.css
+++ b/client/src/components/Carousel/assets/style.css
@@ -10,10 +10,11 @@
 
 /* .landing-carousel{
     height: 450px;
-} */
+} *
 /* .carousel {
     height: 45rem;
 } */
-.thumbs-wrapper, .control-arrow{
+/* These remove the thumb image and control L/R arrow from the carousel' */
+.thumbs-wrapper{
     display: none;
 }
